--- a/.github/workflows/AX6-IPQ8071A.yml
+++ b/.github/workflows/AX6-IPQ8071A.yml
@@ -33,7 +33,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/AX6.config
+  CONFIG_FILE: config/Redmi_AX6.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: true
