--- a/.github/workflows/RedMi_AX6.yml
+++ b/.github/workflows/RedMi_AX6.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: Almighty_RedMi_AX6
+name: RedMi_AX6
 
 on:
   repository_dispatch:
