--- a/.github/workflows/AX6_Almighty.yml
+++ b/.github/workflows/AX6_Almighty.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: AX6 Almighty Edition
+name: Almighty_AX6
 
 on:
   repository_dispatch:
