--- a/.github/workflows/AX6.yml
+++ b/.github/workflows/AX6.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: 5.15_AX6
+name: AX6
 
 on:
   repository_dispatch:
@@ -42,8 +42,8 @@ env:
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: 5.15_AX6
-  PRODUCT_NAME: 5.15_AX6
+  FILE_NAME: AX6
+  PRODUCT_NAME: AX6
 
 jobs:
   build:
@@ -180,6 +180,7 @@ jobs:
           2022-3-8更新配置文件,新增小米IPQ807X全系列最新内核5.15，删除冲突及多余的插件.
           全能版每天都会拉取最新源码更新.
           默认IP： 10.0.0.1 默认密码： password
+          Boos4721源编译的固件特别说明： 管理地址：10.10.10.1 登陆密码：boos 无线密码：1234567890
           当前使用版本:【编译前的最后一次[➦主源码](https://github.com/robimarko/openwrt)更新记录】
           ${{ env.useVersionInfo }}
         artifacts: ${{ env.FIRMWARE }}/*
