--- a/.github/workflows/Almighty_AX3600.yml
+++ b/.github/workflows/Almighty_AX3600.yml
@@ -32,7 +32,8 @@ on:
 env:
   #REPO_URL: https://github.com/robimarko/openwrt
   #REPO_BRANCH: ipq807x-5.15
-  REPO_URL: https://github.com/Boos4721/openwrt
+  #REPO_URL: https://github.com/Boos4721/openwrt
+  REPO_URL: https://github.com/coolsnowwolf/lede 
   REPO_BRANCH: master  
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/AX3600.config
