--- a/.github/workflows/5.15-AX3600.yml
+++ b/.github/workflows/5.15-AX3600.yml
@@ -45,8 +45,8 @@ env:
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: 5.15_AX9000
-  PRODUCT_NAME: 5.15_AX9000
+  FILE_NAME: 5.15-AX3600
+  PRODUCT_NAME: 5.15-AX3600
 
 jobs:
   build:
