--- a/.github/workflows/HIWIFI-HC5962.yml
+++ b/.github/workflows/HIWIFI-HC5962.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: HIWIFI_HC5962
+name: HIWIFI-HC5962
 
 on:
   repository_dispatch:
@@ -42,8 +42,8 @@ env:
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: HIWIFI_HC5962
-  PRODUCT_NAME: HIWIFI_HC5962
+  FILE_NAME: HIWIFI-HC5962
+  PRODUCT_NAME: HIWIFI-HC5962
 
 jobs:
   build:
