--- a/config/AX6.config
+++ b/config/AX6.config
@@ -12,8 +12,10 @@ CONFIG_LIBCURL_PROXY=y
 CONFIG_LIBMBEDTLS_HAVE_ARMV8CE_AES=y	
 CONFIG_LIBSODIUM_MINIMAL=y
 
+
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
+
 
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Shortcut_FE_for_ECM is not set
 CONFIG_PACKAGE_luci-app-turboacc=y
@@ -29,21 +31,24 @@ CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
 CONFIG_LUCI_LANG_en=y
 CONFIG_LUCI_LANG_zh_Hans=y
 
+#虚拟内存
 CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_zram-swap=y
 
+#ipv6
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_6rd=y
 CONFIG_PACKAGE_6to4=y
 
-
+#删除默认的USB相关
 # CONFIG_PACKAGE_kmod-usb-core is not set
 # CONFIG_PACKAGE_kmod-usb-dwc3 is not set
 # CONFIG_PACKAGE_kmod-usb3 is not set
 # CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
 
+#插件区
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 
 #CONFIG_PACKAGE_luci-app-adguardhome=y
@@ -129,4 +134,5 @@ CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-proto-wireguard=y
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 
+#主题
 CONFIG_PACKAGE_luci-theme-infinityfreedom=y
